--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/uuid": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-within-textarea": "^3.1.1",
     "react-scripts": "5.0.1",
     "sass": "^1.59.3",
     "scss": "^0.2.4",
